--- a/app/src/main/res/values-de/strings_tools.xml
+++ b/app/src/main/res/values-de/strings_tools.xml
@@ -17,6 +17,12 @@
     <string name="fan_level">Lüfter\n%d%%</string>
     <string name="fan_level_index">Lüfter %1$d\n%2$d%%</string>
 
+    <string name="printer_head_level_off">Extruder\nAUS</string>
+    <string name="printer_headX_level_off">Extruder %d\nAUS</string>
+    <string name="hot_bed_level_off">Bet\nAUS</string>
+    <string name="fan_level_off">Lüfter\nAUS</string>
+    <string name="fan_level_index_off">Lüfter %d\nAUS</string>
+
     <string name="input_headX_level">Extruder %d (°)</string>
     <string name="input_bed_level">Bet (°)</string>
     <string name="input_fan_level">Lüfter %d (%%)</string>
