--- a/app/src/main/res/values-it/strings_tools.xml
+++ b/app/src/main/res/values-it/strings_tools.xml
@@ -14,8 +14,14 @@
     <string name="printer_head_level">Estrusore\n%d°</string>
     <string name="printer_headX_level">Estrusore %1$d\n%2$d°</string>
     <string name="hot_bed_level">Piatto\n%d°</string>
-    <string name="fan_level">Livello Ventola\n%d%%</string>
-    <string name="fan_level_index">Ventola %1$d livello\n%2$d%%</string>
+    <string name="fan_level">Ventola\n%d%%</string>
+    <string name="fan_level_index">Ventola %1$d\n%2$d%%</string>
+
+    <string name="printer_head_level_off">Estrusore\nVIA</string>
+    <string name="printer_headX_level_off">Extruder %d\nVIA</string>
+    <string name="hot_bed_level_off">Piatto\nVIA</string>
+    <string name="fan_level_off">Ventola\nVIA</string>
+    <string name="fan_level_index_off">Ventola %d\nVIA</string>
 
     <string name="input_headX_level">Estrusore %d (°)</string>
     <string name="input_bed_level">Piatto (°)</string>
