--- a/app/src/main/res/values/strings_tools.xml
+++ b/app/src/main/res/values/strings_tools.xml
@@ -41,6 +41,12 @@
     <string name="fan_level">Fan level\n%d%%</string>
     <string name="fan_level_index">Fan %1$d level\n%2$d%%</string>
 
+    <string name="printer_head_level_off">Extruder\nOFF</string>
+    <string name="printer_headX_level_off">Extruder %d\nOFF</string>
+    <string name="hot_bed_level_off">Bed\nOFF</string>
+    <string name="fan_level_off">Fan level\nOFF</string>
+    <string name="fan_level_index_off">Fan %d level\nOFF</string>
+
     <string name="input_headX_level">Extruder %d (°)</string>
     <string name="input_bed_level">Bed (°)</string>
     <string name="input_fan_level">Fan %d (%%)</string>
