--- a/app/src/main/res/values-fr/strings_settings.xml
+++ b/app/src/main/res/values-fr/strings_settings.xml
@@ -126,7 +126,9 @@
     <string name="setting_enable_ask_profile">Afficher les profils disponibles au démarrage</string>
     <string name="setting_manage_account">Gestion de votre compte</string>
     <string name="setting_enable_keyboard_control">Activer le  contrôle au clavier</string>
+    <string name="setting_enable_baby_stepping">Activer le Baby Stepping</string>
 
+    <string name="setting_enable_baby_stepping_tip">Permettre de déplacer les axes indépendamment du système de mouvement</string>
     <string name="setting_enable_keyboard_control_tip">Contrôler Printoid avec un clavier physique</string>
     <string name="setting_manage_account_tip">Créer/connecter/déconnecter votre compte Printoid</string>
     <string name="setting_enable_ask_profile_tip">Demander quel profil utiliser pour la connection au lancement</string>
@@ -262,5 +264,7 @@
     <string name="restore_error_nothing">Il n\'y a rien à restaurer. Assurez-vous d\'avoir copié le répertoire /Printoid/settings/ sur votre carte SD</string>
     <string name="restore_error_permission">Une erreur s\'est produite avec la permission de lecture</string>
     <string name="restore_error_unknown">Erreur iconnue lors de la restauration, veuillez contacter le développeur de Printoid</string>
+
+    <string name="baby_stepping_disabled">Désactivé</string>
 
 </resources>
