--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -37,6 +37,7 @@
     <string name="menu_timelapse">Timelapses</string>
     <string name="menu_contact_developer">Contact the developer</string>
     <string name="menu_tos">Terms of service</string>
+    <string name="menu_printer_tools">Printer tools</string>
 
     <string name="menu_lite_label_promote">Do you like Printoid Lite?</string>
     <string name="menu_lite_text_promote">Support the developer and enjoy the PRO or PREMIUM full-featured version!</string>
