--- a/app/src/main/res/values/strings_tools.xml
+++ b/app/src/main/res/values/strings_tools.xml
@@ -19,6 +19,10 @@
     <string name="move_10mm" translatable="false">10</string>
     <string name="move_100mm" translatable="false">100</string>
 
+    <string name="baby_move_001mm" translatable="false">0.01</string>
+    <string name="baby_move_005mm" translatable="false">0.05</string>
+    <string name="baby_move_01mm" translatable="false">0.1</string>
+
     <string name="extrude_1mm" translatable="false">1</string>
     <string name="extrude_5mm" translatable="false">5</string>
     <string name="extrude_10mm" translatable="false">10</string>
@@ -55,6 +59,7 @@
     <string name="input_flowrate">Flow rate (%)</string>
     <string name="input_travel">Travel distance (mm)</string>
     <string name="input_extruder">Extrusion length (mm)</string>
+    <string name="input_baby_stepping">Baby Stepping distance (mm)</string>
 
     <string name="tool_plot_click_message">Long-click on the graph\nfor advanced tools</string>
 
