--- a/app/src/main/res/values-de/strings_settings.xml
+++ b/app/src/main/res/values-de/strings_settings.xml
@@ -265,6 +265,7 @@
     <string name="restore_error_permission">Es besteht ein Fehler bei der Leseberechtigung</string>
     <string name="restore_error_unknown">Ein unbekannter Fehler ist aufgetreten. Bitte kontaktiere den Entwickler von Printoid</string>
 
+    <string name="baby_stepping_distance">Baby Stepping Entfernung</string>
     <string name="baby_stepping_disabled">Deaktiviert</string>
 
 </resources>
